--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
    left: 0;
    right: 0;
    bottom: 0;
-   background-image: url("./assets/background/parallax-bg.gif");
+   background-image: url("./assets/background/bg.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
